# Lashir

./: Dockerfile  Dockerfile.txt  Readme.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yml
Sanne/: Dockerfile  main.py  requirements.txt
go-api/: Dockerfile  go.mod  main.go  solfa.go
python-audio/: Dockerfile  app.py  detect.py  notate.py  requirements.txt
python-music21/: app.py  requirements.txt
