[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lashir"
version = "1.0.0"
description = "Your Ultimate Sound to Solfa Converter"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "sanneemmanuel", email = "sanneemmanuel@example.com" }
]
requires-python = ">=3.11"
keywords = ["music", "solfa", "audio-processing", "music-notation"]

dependencies = [
  "flask>=3.0.0",
  "librosa>=0.10.1",
  "music21>=9.1.0",
  "python-docx>=1.1.0",
  "matplotlib[ttf]>=3.8.2",
  "requests>=2.31.0",
  "numpy>=1.26.3",
  "gunicorn>=21.2.0",
  "soundfile>=0.12.1",
  "scipy>=1.11.4",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "flake8>=6.1.0",
  "mypy>=1.8.0",
  "types-requests>=2.31.0.1"
]

[project.scripts]
lashir = "lashir.cli:main"

[project.urls]
Homepage = "https://github.com/sanneemmanuel/lashir"
Repository = "https://github.com/sanneemmanuel/lashir"
"Bug Tracker" = "https://github.com/sanneemmanuel/lashir/issues"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=lashir --cov-report=term-missing"
